apps/reisenotiz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reisenotiz
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: reisenotiz
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: reisen.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reisenotiz
                port:
                  number: 80
    - host: reisen.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reisenotiz
                port:
                  number: 80
